--- a/source/styles/blocks/demonstration.scss
+++ b/source/styles/blocks/demonstration.scss
@@ -2,11 +2,41 @@
 
 .demonstration {
   position: relative;
-  width: 100%;
+  max-width: 560px;
   margin: 0 auto;
+  overflow: hidden;
+  opacity: 0;
+  animation: fadeIn 0.6s ease-out forwards;
+
+  @media screen and (min-width: $desktop-width) {
+    margin: 0 0 0 224px;
+  }
+}
+
+.demonstration__demonstration-image {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+
+.demonstration__demonstration-image--before {
+  position: relative;
+  z-index: 1;
+}
+
+.demonstration__demonstration-image--after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  clip-path: polygon(50% 0, 100% 0, 100% 100%, 50% 100%);
 }
 
 /* Стили для ползунка */
+
 .demonstration__slider {
   position: absolute;
   top: 0;
@@ -42,4 +72,15 @@
   font-size: 18px;
   transform: translate(-50%, -50%);
   cursor: grab;
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+.demonstration__slider:active::before {
+  transform: translate(-50%, -50%) scale(0.95);
+  background-color: $icon-basic-grey;
 }
