--- a/source/styles/blocks/example.scss
+++ b/source/styles/blocks/example.scss
@@ -1,9 +1,60 @@
 @use "../common/variables.scss" as *;
 @use "../common/mixins.scss" as *;
-@use "../blocks/demonstration.scss" as *;
+
 
 .example {
   background-color: $base-moreaccent-color-background;
+  padding: 25px 20px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media screen and (min-width: $tablet-width) {
+    background-color: $base-accent-color-text;
+    padding: 0 30px 101px;
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 462px;
+      background-color: $base-moreaccent-color-background;
+      z-index: 0;
+    }
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    display: flex;
+    flex-flow: row wrap;
+    padding: 0 101px 85px;
+    align-items: flex-start;
+    justify-content: center;
+
+    &::before {
+      background-color: $base-accent-color-background;
+    }
+  }
+}
+
+.example__wrapper {
+  max-width: 280px;
+
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    max-width: 708px;
+    margin-bottom: 99px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    max-width: 436px;
+    z-index: 0;
+    margin-bottom: 0;
+  }
 }
 
 .example__title {
@@ -11,11 +62,31 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
+  margin: 0 0 40px;
+
+  @media screen and (min-width: $tablet-width) {
+    margin: 0 0 60px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin-bottom: 146px;
+  }
 }
 
 .example__desc {
   line-height: 18px;
   color: $base-color-text;
+  margin: 0 0 20px;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+    margin: 0 0 55px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin-bottom: 69px;
+  }
 }
 
 .example__results-difference,
@@ -23,6 +94,11 @@
   font-family: "Oswald", sans-serif;
   font-size: 24px;
   line-height: 24px;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+  }
 }
 
 .example__results-change,
@@ -41,14 +117,28 @@
   display: block;
   text-align: center;
   margin-bottom: 20px;
+
+  @media screen and (min-width: $tablet-width) {
+    max-width: 174px;
+    font-size: 20px;
+    padding: 11px 0 17px;
+    margin-bottom: 0;
+    text-align: right;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    display: flex;
+    gap: 63px;
+    max-width: 500px;
+  }
 }
 
 .example__results {
   text-transform: uppercase;
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 20px;
-  gap: 32px;
+  margin-bottom: 40px;
+  gap: 30px;
   justify-content: center;
 }
 
@@ -56,29 +146,26 @@
   padding: 14px 42px 17px;
 
   @include decorative-border;
+
+  @media screen and (min-width: $tablet-width) {
+    @include decorative-border($background: $base-accent-color-text);
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    @include decorative-border($background: $base-accent-color-background);
+  }
 }
 
 .example__results-time {
   padding: 14px 21px 17px;
 
   @include decorative-border($content: "затрачено времени");
-}
 
-@media screen and (min-width: $tablet-width) {
-  .example__wrapper {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-  }
-}
-
-@media screen and (min-width: $desktop-width) {
-  .example {
-    display: flex;
-    flex-wrap: wrap;
+  @media screen and (min-width: $tablet-width) {
+    @include decorative-border($background: $base-accent-color-text);
   }
 
-  .example__wrapper {
-    max-width: 436px;
+  @media screen and (min-width: $desktop-width) {
+    @include decorative-border($background: $base-accent-color-background);
   }
 }
