--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -1,26 +1,86 @@
 @use "../common/variables.scss" as *;
 
+.how-it-works {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 49px;
+
+  @media screen and (min-width: $tablet-width) {
+    padding: 0 30px 47px;
+    margin-bottom: 45px;
+    border-bottom: 1px solid $decoration-line-menu;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    padding: 0 110px 69px;
+    margin: 0;
+  }
+}
+
+.how-it-works__wrapper {
+  max-width: 280px;
+
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    max-width: 708px;
+    padding-right: 75px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    min-width: 100%;
+    padding-right: 0;
+    justify-content: space-between;
+  }
+}
+
 .how-it-works__title {
   font-family: "Oswald", sans-serif;
   font-size: 36px;
   line-height: 40px;
   font-weight: 400;
+  margin: 0 0 40px;
 }
 
 .how-it-works__list {
   list-style: none;
-  padding-left: 0;
+  padding: 0;
+  margin: 0;
   line-height: 18px;
   color: $base-color-text;
   display: flex;
   flex-direction: column;
   gap: 20px;
+
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    counter-reset: step-counter;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    flex-flow: row wrap;
+    justify-content: space-between;
+    min-width: 1216px;
+  }
 }
 
 .how-it-works__list-item {
   display: flex;
   gap: 20px;
   align-items: center;
+
+  @media screen and (min-width: $tablet-width) {
+    position: relative;
+    padding-bottom: 57px;
+    counter-increment: step-counter;
+    max-width: 242px;
+    padding-top: 150px;
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
 
 .how-it-works__list-item::before {
@@ -32,6 +92,28 @@
   width: 60px;
   height: 60px;
   display: block;
+
+  @media screen and (min-width: $tablet-width) {
+    position: absolute;
+    top: 40px;
+    width: 80px;
+    height: 80px;
+  }
+}
+
+.how-it-works__list-item::after {
+  @media screen and (min-width: $tablet-width) {
+    content: counter(step-counter);
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: $base-accent-color-background;
+    font-size: 280px;
+    font-weight: 400;
+    line-height: 280px;
+    font-family: "Oswald", sans-serif;
+    z-index: -1;
+  }
 }
 
 .how-it-works__list-item--functional-nutrition::before {
@@ -52,55 +134,4 @@
 .how-it-works__list-item--timing::before {
   background-image: url("../../icons/clock.svg");
   background-size: 26px 31px;
-}
-
-@media screen and (min-width: $tablet-width) {
-  .how-it-works__wrapper {
-    display: flex;
-    flex-direction: column;
-    max-width: 708px;
-  }
-
-  .how-it-works__list {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    counter-reset: step-counter;
-  }
-
-  .how-it-works__list-item {
-    position: relative;
-    padding-bottom: 57px;
-    counter-increment: step-counter;
-    max-width: 250px;
-    padding-top: 150px;
-  }
-
-  .how-it-works__list-item::before {
-    position: absolute;
-    top: 40px;
-  }
-
-  .how-it-works__list-item::after {
-    content: counter(step-counter);
-    position: absolute;
-    right: 0;
-    top: 120px;
-    color: $base-accent-color-background;
-    font-size: 280px;
-    font-weight: 400;
-    line-height: 28px;
-    font-family: "Oswald", sans-serif;
-    z-index: -1;
-  }
-}
-
-@media screen and (min-width: $desktop-width) {
-  .how-it-works__wrapper {
-    max-width: 1220px;
-  }
-
-  .how-it-works__list {
-    flex-flow: row wrap;
-  }
 }
