--- a/source/styles/blocks/list-item.scss
+++ b/source/styles/blocks/list-item.scss
@@ -1,4 +1,37 @@
 @use "../common/variables.scss" as *;
+@use "../common/mixins.scss" as *;
+
+.list-item__wrapper {
+  min-width: 140px;
+
+  @media screen and (min-width: $tablet-width) {
+    min-width: 250px;
+    margin-bottom: 32px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    min-width: 169px;
+  }
+}
+
+.list-item__link {
+  min-width: 140px;
+  text-align: center;
+
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 200px;
+    min-height: 210px;
+    margin-bottom: 22px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    min-width: 169px;
+    margin-bottom: 12px;
+  }
+}
 
 .list-item__title {
   font-family: "Oswald", sans-serif;
@@ -6,12 +39,63 @@
   line-height: 20px;
   font-weight: 400;
   color: $base-title-color-text;
+  max-width: 76px;
+  margin: 0 0 14px;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 24px;
+    max-width: 135px;
+    margin: 0 auto 20px;
+    text-align: center;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin-bottom: 23px;
+  }
+}
+
+.list-item__desc-wrapper table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.list-item__desc-wrapper tr {
+  display: flex;
+  justify-content: space-between;
+
+  @media screen and (min-width: $tablet-width) {
+    border-bottom: 1px solid $base-color-border;
+    padding-bottom: 5px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    padding-bottom: 10px;
+  }
+}
+
+.list-item__desc-wrapper td {
+  flex: 1;
+}
+
+.list-item__desc-content {
+  text-align: end;
+  padding: 0;
+}
+
+.list-item__desc-title {
+  padding: 0;
 }
 
 .list-item__desc {
   font-size: 12px;
   line-height: 16px;
   color: $base-color-text;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
 
 .list-item__link-order {
@@ -21,6 +105,13 @@
   line-height: 20px;
   color: $base-accent-color-text;
   background-color: $base-color-background;
-  min-width: 280px;
+  width: 100%;
   text-align: center;
+  margin-top: 17px;
+
+  @include often-button();
+
+  @media screen and (min-width: $tablet-width) {
+    margin-top: 0;
+  }
 }
