--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -1,6 +1,20 @@
+@use "../common/variables.scss" as *;
+@use "../common/mixins.scss" as *;
+
 .main-header__wrapper {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 12px 21px 12px 20px;
+
+  @media screen and (min-width: $tablet-width) {
+    padding: 25px 34px 25px 30px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    padding: 55px 110px 0;
+    margin-bottom: 0;
+  }
 }
 
 .main-header {
