--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -1,16 +1,156 @@
 @use "../common/variables.scss" as *;
+@use "../common/mixins.scss" as *;
+
+.sub-products {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  @media screen and (min-width: $tablet-width) {
+    padding: 0 30px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    padding: 0 70px;
+    margin-bottom: 96px;
+  }
+}
+
+.sub-products__wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+
+  @media screen and (min-width: $tablet-width) {
+    width: 100%;
+  }
+}
+
+.sub-products__content {
+  display: flex;
+  flex-direction: column;
+  min-width: 280px;
+  padding: 0 20px;
+
+  @media screen and (min-width: $tablet-width) {
+    padding: 0;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    align-items: flex-start;
+    display: flex;
+    gap: 80px;
+    flex-flow: row wrap;
+  }
+}
 
 .sub-products__title {
   font-family: "Oswald", sans-serif;
   font-size: 24px;
   line-height: 24px;
   font-weight: 400;
+  padding: 13px 40px 13px 20px;
+  position: relative;
+  background-color: $base-accent-color-text;
+  inline-size: fit-content;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 100vw;
+    height: 2px;
+    background: $base-color-background;
+    box-shadow: 100vw 0 0 0 $base-color-background;
+    z-index: -1;
+  }
+
+  @media screen and (min-width: $tablet-width) {
+    padding: 0 38px;
+    margin: 0 0 80px;
+    font-size: 32px;
+    line-height: 32px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    font-size: 40px;
+    line-height: 40px;
+    padding: 0 40px;
+  }
 }
 
 .sub-products__list {
   list-style: none;
-  margin: 0;
+  margin: 0 0 35px;
   padding: 0;
+  display: flex;
+  flex-direction: column;
+
+  li:first-child .sub-products__item-title {
+    position: relative;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 100%;
+      height: 1px;
+      background-color: $base-color-border;
+    }
+  }
+
+  @media screen and (min-width: $tablet-width) {
+    margin-bottom: 75px;
+
+    li:first-child .sub-products__item-title::before {
+      content: none;
+    }
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    min-width: 896px;
+  }
+}
+
+.sub-products__item {
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 19px;
+
+  @include decorative-line($color: $base-color-border);
+
+  @media screen and (min-width: $tablet-width) {
+    border: 1px solid $base-color-border;
+    border-bottom: none;
+    padding: 26px 38px 28px;
+    flex-flow: row wrap;
+    justify-content: space-between;
+
+    &:last-child {
+      border-bottom: 1px solid $base-color-border;
+    }
+
+    &::after {
+      content: none;
+    }
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    padding: 15px 0 17px;
+    border-right: none;
+    border-left: none;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 896px;
+    column-gap: 40px;
+    align-items: center;
+  }
 }
 
 .sub-products__item-title {
@@ -20,11 +160,48 @@
   font-weight: 400;
   text-transform: uppercase;
   color: $base-title-color-text;
+  margin-top: 0;
+  padding-top: 13px;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 25px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.sub-products__table-wrapper {
+  display: flex;
+  margin-bottom: 15px;
+
+  @media screen and (min-width: $tablet-width) {
+    align-items: flex-end;
+    margin-bottom: 23px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin-bottom: 0;
+  }
 }
 
 .sub-products__table {
   line-height: 14px;
   color: $base-color-text;
+  border-collapse: collapse;
+}
+
+.sub-products__table tbody tr {
+  display: flex;
+  flex-wrap: wrap;
+  min-width: 280px;
+  justify-content: space-between;
 }
 
 .sub-products__link-order {
@@ -33,27 +210,60 @@
   line-height: 20px;
   text-transform: uppercase;
   color: $base-accent-color-text;
-  background-color: $base-color-background;
+  text-align: center;
+
+  @include often-button;
+
+  @media screen and (min-width: $tablet-width) {
+    min-width: 100%;
+  }
 }
 
 .sub-products__gift {
   display: flex;
   padding: 139px 20px 20px;
-  background-color: $base-color-background;
-  max-width: 280px;
+  min-width: 280px;
   position: relative;
+
+  @media screen and (min-width: $tablet-width) {
+    min-width: 707px;
+    padding: 71px 125px 69px 0;
+    justify-content: end;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    min-width: 245px;
+    display: flex;
+    padding: 139px 20px 20px;
+  }
 }
 
-.sub-products__gift-desc {
-  display: block;
-  font-size: 16px;
-  line-height: 20px;
-  color: $base-accent-color-text;
-  background-color: $base-color-background;
-  text-align: center;
-  padding: 48px 0 23px;
-  margin: 0 auto;
-  max-width: 162px;
+.sub-products__gift::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  height: 290px;
+
+  @include gift-background("../../images/catalog-background-gift-mobile@1x.jpg");
+
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  z-index: -1;
+
+  @media screen and (min-width: $tablet-width) {
+    @include gift-background("../../images/catalog-background-gift-tablet@1x.jpg");
+    height: 200px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    height: 288px;
+
+    @include gift-background("../../images/catalog-background-gift-desktop@1x.jpg");
+  }
 }
 
 .sub-products__gift::before {
@@ -65,21 +275,8 @@
   width: 78px;
   height: 80px;
   background: url("../../icons/gift.svg") center/contain no-repeat;
-}
 
-.sub-products__wrapper {
-  display: flex;
-  flex-direction: column;
-}
-
-@media (min-width: $tablet-width) {
-  .sub-products__gift {
-    max-width: 707px;
-    padding: 40px;
-    justify-content: end;
-  }
-
-  .sub-products__gift::before {
+  @media screen and (min-width: $tablet-width) {
     width: 81px;
     height: 82px;
     top: 50%;
@@ -87,52 +284,36 @@
     transform: translateY(-50%);
   }
 
-  .sub-products__gift-desc {
-    max-width: 160px;
-    padding: 0;
-    text-align: left;
-    margin: 31px 85px 29px;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .sub-products__content {
-    display: flex;
-    gap: 80px;
-    flex-flow: row wrap;
-    align-items: center;
-  }
-
-  .sub-products__list {
-    display: flex;
-    flex-direction: column;
-    min-width: 896px;
-  }
-
-  .sub-products__item {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    max-width: 896px;
-  }
-
-  .sub-products__gift {
-    display: flex;
-    padding: 139px 20px 20px;
-    min-width: 245px;
-  }
-
-  .sub-products__gift-desc {
-    text-align: center;
-    padding: 46px 0 23px;
-    margin: 0 auto;
-    max-width: 162px;
-  }
-
-  .sub-products__gift::before {
+  @media screen and (min-width: $desktop-width) {
     top: 59px;
     left: 50%;
     transform: translateX(-50%);
     width: 80px;
     height: 83px;
+  }
+}
+
+.sub-products__gift-desc {
+  display: block;
+  font-size: 16px;
+  line-height: 20px;
+  color: $base-accent-color-text;
+  text-align: center;
+  padding: 48px 0 23px;
+  margin: 0 auto;
+  max-width: 162px;
+
+  @media screen and (min-width: $tablet-width) {
+    min-width: 161px;
+    text-align: left;
+    padding: 0;
+    margin: 0;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    text-align: center;
+    padding: 46px 0 23px;
+    margin: 0 auto;
+    max-width: 162px;
   }
 }
