--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -1,10 +1,58 @@
 @use "../common/variables.scss" as *;
 
+.subscribe {
+  margin-bottom: 40px;
+
+  @media screen and (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    padding: 80px 30px;
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    padding: 0 70px 104px;
+  }
+}
+
+.subscribe__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 .subscribe__title {
   font-family: "Oswald", sans-serif;
   font-size: 24px;
   line-height: 24px;
   font-weight: 400;
+  position: relative;
+  inline-size: fit-content;
+  padding: 0 40px 0 20px;
+  margin-bottom: 32px;
+  background-color: $base-accent-color-text;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 0;
+    width: 100vw;
+    height: 2px;
+    background: $base-color-background;
+    box-shadow: 100vw 0 0 0 $base-color-background;
+    z-index: -2;
+  }
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 32px;
+    line-height: 32px;
+    padding: 0 40px;
+    margin-bottom: 66px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin: 0 0 72px;
+  }
 }
 
 .subscribe__desc {
@@ -13,6 +61,41 @@
   line-height: 24px;
   font-weight: 400;
   text-align: center;
+  margin: 0 auto;
+  margin-bottom: 24px;
+  padding: 0 20px;
+  max-width: 320px;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 24px;
+    line-height: 32px;
+    min-width: 632px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    margin-bottom: 24px;
+    min-width: 1360px;
+  }
+}
+
+.subscribe__form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  padding: 0 20px;
+
+  @media screen and (min-width: $tablet-width) {
+    min-width: 100%;
+    flex-direction: row;
+    padding: 0 68px;
+    margin: 0 auto;
+    gap: 0;
+    justify-content: center;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    min-width: 752px;
+  }
 }
 
 .subscribe__field-email {
@@ -21,8 +104,15 @@
   text-transform: uppercase;
   color: $base-color-text;
   border: 1px solid $base-color-border;
-  min-width: 280px;
   padding: 12px;
+
+  @media screen and (min-width: $tablet-width) {
+    min-width: 376px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    min-width: 496px;
+  }
 }
 
 .subscribe__form-button {
@@ -34,13 +124,8 @@
   text-transform: uppercase;
   border: none;
   padding: 15px 30px;
-}
 
-.subscribe__form {
-  display: flex;
-  flex-direction: column;
-
-  @media (min-width: $tablet-width) {
-    flex-direction: row;
+  @media screen and (min-width: $tablet-width) {
+    min-width: 256px;
   }
 }
