--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -22,7 +22,7 @@
   border: 0;
 }
 
-@mixin decorative-line($width: 240px) {
+@mixin decorative-line($width: 100%, $color: $decoration-line) {
   position: relative;
 
   &::after {
@@ -33,11 +33,11 @@
     transform: translateX(-50%);
     width: $width;
     height: 1px;
-    background-color: $decoration-line;
+    background-color: $color;
   }
 }
 
-@mixin decorative-border($content: "снижение веса", $padding: 5px, $font-size: 12px, $line-height: 12px, $width: 77px) {
+@mixin decorative-border($content: "снижение веса", $padding: 5px, $background: $base-moreaccent-color-background, $font-size: 12px, $line-height: 12px, $width: 77px) {
   border: 1px solid $base-color-border;
   border-radius: 3px;
   position: relative;
@@ -46,7 +46,7 @@
     content: $content;
     position: absolute;
     padding: $padding;
-    background: $base-moreaccent-color-background;
+    background: $background;
     font-family: "Lato", sans-serif;
     font-size: $font-size;
     line-height: $line-height;
@@ -59,4 +59,22 @@
     width: $width;
     text-align: center;
   }
+}
+
+@mixin often-button($background: $base-color-background) {
+  padding: 10px 20px;
+  background: $background;
+}
+
+@mixin hero-background($image-url) {
+  background-image:
+    linear-gradient(to bottom, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+    url($image-url),
+    linear-gradient(90deg, rgba(79, 79, 84, 1) 0%, rgba(82, 81, 86, 1) 22%, rgba(72, 71, 76, 1) 50%, rgba(63, 62, 67, 1) 100%);
+}
+
+@mixin gift-background($image-url) {
+  background-image:
+    linear-gradient(to bottom, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
+    url($image-url);
 }
