--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -2,14 +2,6 @@
 @use "../common/mixins.scss" as *;
 @use "../blocks/social-list.scss" as *;
 
-.footer__map {
-  width: 100%;
-
-  @media screen and (min-width: $tablet-width) {
-    max-height: 400px;
-  }
-}
-
 .footer__invite {
   font-family: "Oswald", sans-serif;
   font-size: 16px;
@@ -48,6 +40,7 @@
 
   @media screen and (min-width: $desktop-width) {
     text-align: start;
+    gap: 19px;
   }
 }
 
@@ -59,23 +52,9 @@
 
   @include decorative-line;
 
-  &:hover .footer__logo-text {
-    filter: brightness(0) saturate(100%) invert(24%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(90%) contrast(80%);
-  }
-
-  &:active .footer__logo-text {
-    filter: brightness(0) saturate(100%) invert(42%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(90%) contrast(90%);
-  }
-
-
   @media screen and (min-width: $tablet-width) {
     width: 128px;
-    height: 24px;
     padding: 0;
-
-    &::after {
-      content: none;
-    }
   }
 }
 
@@ -95,62 +74,33 @@
   flex-direction: column;
   align-items: center;
   position: relative;
-
-  @media screen and (min-width: $tablet-width) {
-    background-color: $base-accent-color-background;
-  }
-}
-
-.footer--catalog {
-  background-color: $base-accent-color-background;
-}
-
-.footer__contacts {
-  display: flex;
-  flex-flow: row wrap;
-  width: 100%;
-  justify-content: center;
-
-  @media screen and (min-width: $tablet-width) {
-    background-color: $base-accent-color-text;
-  }
-}
-
-.footer__contacts--catalog {
-  background-color: $base-accent-color-background;
 }
 
 .footer__wrapper {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
-  min-width: 320px;
+  min-width: 100%;
   padding: 26px 20px;
   background-color: $base-accent-color-text;
   z-index: 5;
 
   @media screen and (min-width: $tablet-width) {
-    min-width: 768px;
+    min-width: 100%;
     padding: 60px 70px;
   }
 
   @media screen and (min-width: $desktop-width) {
     position: absolute;
     min-width: 565px;
-    padding: 60px 79px;
     top: 95px;
-    left: 50%;
-    transform: translateX(calc(-50% - 327px));
+    left: 110px;
   }
 }
 
 .footer__wrapper--catalog {
   @media screen and (max-width: $desktop-width) {
     background-color: $base-accent-color-background;
-  }
-
-  @media screen and (min-width: $desktop-width) {
-    background-color: $base-accent-color-text;
   }
 }
 
@@ -173,44 +123,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    max-width: 768px;
   }
-
-  @media screen and (min-width: $desktop-width) {
-    padding: 66px 110px;
-    max-width: 1440px;
-  }
-}
-
-.footer__logo {
-  display: block;
-  padding-bottom: 20px;
-  text-align: center;
-
-  @include decorative-line(280px);
-}
-
-.footer__copyright::after {
-  content: "";
-  width: 27px;
-  height: 34px;
-  background-repeat: no-repeat;
-  background-color: $icon-background-color;
-  mask-image: url("../../icons/html-academy.svg");
-  mask-size: 27px 34px;
-  display: block;
-}
-
-.footer__wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.footer__wrapper-socials {
-  display: flex;
-  flex-flow: column wrap;
-  align-items: center;
 }
 
 .footer__copyright {
@@ -221,22 +134,69 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  min-width: 280px;
+  width: 100%;
+
+  @media screen and (min-width: $tablet-width) {
+    width: 168px;
+  }
 }
 
-@media screen and (min-width: $tablet-width) {
-  .footer__wrapper-socials {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-  }
+/* карты */
 
-  .social-list::after,
-  .footer__logo::after {
-    content: none;
-  }
+.footer__map-container {
+  position: relative;
+  width: 100%;
+  height: 362px; /* ФИКСИРОВАННАЯ высота для мобильной версии */
 
-  .footer__copyright {
-    min-width: 168px;
+  @media screen and (min-width: $tablet-width) {
+    height: 400px; /* ФИКСИРОВАННАЯ высота для планшета */
   }
+}
+
+/* Основная карта */
+
+.footer__map {
+  position: relative;
+  border: none;
+  z-index: 2;
+  width: 100%;
+  height: 362px;
+
+  @media screen and (min-width: $tablet-width) {
+    height: 400px;
+  }
+}
+
+/* Fallback для карты */
+
+.footer__map-fallback {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  z-index: 1;
+  overflow: hidden;
+}
+
+/* Изображение fallback с сохранением пропорций */
+
+.footer__map-fallback-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* Показываем fallback при ошибке */
+
+.footer__map-container--error .footer__map-fallback {
+  display: block;
+}
+
+/* Скрываем карту при ошибке */
+
+.footer__map-container--error .footer__map {
+  display: none;
 }
