--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -8,7 +8,7 @@
   position: relative;
 
   @media screen and (min-width: 768px) {
-    padding: 35px 20px 0;
+    padding: 40px 30px 0;
     display: flex;
     justify-content: center;
   }
@@ -74,7 +74,7 @@
   @media (min-width: $desktop-width) {
     position: relative;
     max-width: 1000px;
-    padding: 81px;
+    padding: 80px;
   }
 }
 
@@ -156,13 +156,14 @@
 }
 
 @media screen and (min-width: $desktop-width) {
-  picture {
+  picture img {
+    display: block;
     order: 10;
   }
 }
 
 @media (min-width: $desktop-width) {
-  .hero__wrapper picture {
+  .hero__wrapper picture img {
     position: absolute;
     left: 448px;
     top: 0;
