--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -40,7 +40,6 @@
 
   @media screen and (min-width: $desktop-width) {
     text-align: start;
-    gap: 19px;
   }
 }
 
@@ -54,6 +53,7 @@
 
   @media screen and (min-width: $tablet-width) {
     width: 128px;
+    height: 24px;
     padding: 0;
 
     &::after {
@@ -97,6 +97,7 @@
   @media screen and (min-width: $desktop-width) {
     position: absolute;
     min-width: 565px;
+    padding: 60px 79px;
     top: 95px;
     left: 110px;
   }
@@ -127,6 +128,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    padding: 66px 110px;
   }
 }
 
