--- a/source/styles/blocks/subscribe.scss
+++ b/source/styles/blocks/subscribe.scss
@@ -28,7 +28,7 @@
   position: relative;
   inline-size: fit-content;
   padding: 0 40px 0 20px;
-  margin-bottom: 32px;
+  margin: 40px 0 32px;
   background-color: $base-accent-color-text;
 
   &::before {
