--- a/source/styles/blocks/demonstration.scss
+++ b/source/styles/blocks/demonstration.scss
@@ -9,7 +9,8 @@
   animation: fadeIn 0.6s ease-out forwards;
 
   @media screen and (min-width: $desktop-width) {
-    margin: 0 0 0 224px;
+    margin: 0;
+    margin-bottom: 10px;
   }
 }
 
