--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -41,6 +41,12 @@
   line-height: 40px;
   font-weight: 400;
   margin: 0 0 40px;
+
+  @media screen and (min-width: $desktop-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 32px;
+  }
 }
 
 .how-it-works__list {
@@ -58,6 +64,7 @@
     flex-flow: row wrap;
     justify-content: space-between;
     counter-reset: step-counter;
+    gap: 37px;
   }
 
   @media screen and (min-width: $desktop-width) {
