--- a/source/styles/blocks/main-navigation.scss
+++ b/source/styles/blocks/main-navigation.scss
@@ -43,8 +43,8 @@
     position: static;
     background: none;
     padding: 0;
+    margin: 0;
     flex-wrap: wrap;
-    margin-left: 14px;
   }
 }
 
@@ -90,7 +90,7 @@
   cursor: pointer;
   transition: all 0.5s cubic-bezier(0.16, 1, 0.3, 1);
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tablet-width) {
     display: none;
   }
 
