--- a/source/styles/blocks/page-content.scss
+++ b/source/styles/blocks/page-content.scss
@@ -1,8 +1,19 @@
+@use "../common/variables.scss" as *;
+@use "../common/mixins.scss" as *;
+
 .page-content__title {
   font-family: "Oswald", sans-serif;
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
-  margin: 27px 42px 41px 20px;
-  min-width: 259px;
+  margin: 0;
+  padding: 27px 20px 40px;
+  min-width: 275px;
+  border-top: 1px solid $decoration-line;
+
+  @media screen and (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    padding: 39px 0 84px 30px;
+  }
 }
