--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -49,7 +49,8 @@
   font-size: 24px;
   line-height: 24px;
   font-weight: 400;
-  padding: 13px 40px 13px 20px;
+  padding: 0 40px 0 20px;
+  margin: 0 0 35px;
   position: relative;
   background-color: $base-accent-color-text;
   inline-size: fit-content;
@@ -160,13 +161,14 @@
   font-weight: 400;
   text-transform: uppercase;
   color: $base-title-color-text;
-  margin-top: 0;
+  margin: 0 0 12px;
   padding-top: 13px;
 
   @media screen and (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 20px;
     margin-bottom: 25px;
+    padding-top: 0;
   }
 
   @media screen and (min-width: $desktop-width) {
@@ -202,6 +204,11 @@
   flex-wrap: wrap;
   min-width: 280px;
   justify-content: space-between;
+}
+
+td.sub-products__desc,
+td.sub-products__price {
+  padding: 0;
 }
 
 .sub-products__link-order {
