--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 21px 12px 20px;
+  padding: 13px 21px 14px 20px;
 
   @media screen and (min-width: $tablet-width) {
     padding: 25px 34px 25px 30px;
@@ -16,6 +16,18 @@
   @media screen and (min-width: $desktop-width) {
     padding: 55px 110px 0;
     margin-bottom: 0;
+  }
+}
+
+.main-header__logo {
+  height: 38px;
+
+  @media screen and (min-width: $tablet-width) {
+    height: 50px;
+  }
+
+  @media screen and (min-width: $desktop-width) {
+    height: 59px;
   }
 }
 
