--- a/source/styles/blocks/how-it-works.scss
+++ b/source/styles/blocks/how-it-works.scss
@@ -13,8 +13,9 @@
   }
 
   @media screen and (min-width: $desktop-width) {
-    padding: 0 110px 69px;
+    padding: 0 106px 69px 110px;
     margin: 0;
+    border-bottom: none;
   }
 }
 
@@ -29,7 +30,7 @@
   }
 
   @media screen and (min-width: $desktop-width) {
-    min-width: 100%;
+    min-width: 1220px;
     padding-right: 0;
     justify-content: space-between;
   }
