--- a/source/styles/blocks/social-list.scss
+++ b/source/styles/blocks/social-list.scss
@@ -17,7 +17,7 @@
   @media screen and (min-width: $tablet-width) {
     max-width: 400px;
     margin: 0;
-    padding: 8px 0 7px;
+    padding: 8px 12px 7px;
 
     &::after {
       content: none;
@@ -32,6 +32,17 @@
   min-height: 22px;
   display: block;
   background-color: $icon-background-color;
+
+  &:hover,
+  &:focus {
+    filter: brightness(0) saturate(100%) invert(56%) sepia(90%) saturate(380%) hue-rotate(60deg) brightness(95%) contrast(90%);
+    transition: all 0.2s ease;
+  }
+
+  &:active {
+    opacity: 0.3;
+    transition: all 0.3s ease;
+  }
 }
 
 .social-list__link--vk {
