--- a/source/styles/blocks/sub-products.scss
+++ b/source/styles/blocks/sub-products.scss
@@ -7,22 +7,23 @@
   align-items: center;
 
   @media screen and (min-width: $tablet-width) {
-    padding: 0 30px;
+    max-width: 768px;
+    margin: 0 auto;
   }
 
   @media screen and (min-width: $desktop-width) {
-    padding: 0 70px;
     margin-bottom: 96px;
+    max-width: 1440px;
   }
 }
 
 .sub-products__wrapper {
-  width: 100%;
+  max-width: 320px;
   display: flex;
   flex-direction: column;
 
   @media screen and (min-width: $tablet-width) {
-    width: 100%;
+    max-width: 100%;
   }
 }
 
@@ -34,6 +35,7 @@
 
   @media screen and (min-width: $tablet-width) {
     padding: 0;
+    min-width: 708px;
   }
 
   @media screen and (min-width: $desktop-width) {
@@ -41,6 +43,8 @@
     display: flex;
     gap: 80px;
     flex-flow: row wrap;
+    min-width: 1221px;
+    padding-left: 40px;
   }
 }
 
@@ -104,7 +108,7 @@
   }
 
   @media screen and (min-width: $tablet-width) {
-    margin-bottom: 75px;
+    margin-bottom: 70px;
 
     li:first-child .sub-products__item-title::before {
       content: none;
@@ -129,7 +133,7 @@
   @media screen and (min-width: $tablet-width) {
     border: 1px solid $base-color-border;
     border-bottom: none;
-    padding: 26px 38px 28px;
+    padding: 26px 37px 27px;
     flex-flow: row wrap;
     justify-content: space-between;
 
@@ -220,6 +224,7 @@ td.sub-products__price {
   text-align: center;
 
   @include often-button;
+  @include button-condition;
 
   @media screen and (min-width: $tablet-width) {
     min-width: 100%;
@@ -233,7 +238,7 @@ td.sub-products__price {
   position: relative;
 
   @media screen and (min-width: $tablet-width) {
-    min-width: 707px;
+    max-width: 707px;
     padding: 71px 125px 69px 0;
     justify-content: end;
   }
