--- a/source/styles/common/mixins.scss
+++ b/source/styles/common/mixins.scss
@@ -78,3 +78,63 @@
     linear-gradient(to bottom, rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)),
     url($image-url);
 }
+
+@mixin navigation-border($border-color: $base-color-background) {
+  border-bottom: 2px solid $border-color;
+}
+
+@mixin button-condition {
+  &:hover {
+    background-color: #5eaa2f;
+    transition: background-color 0.3s ease;
+  }
+
+  &:active {
+    color: rgba(255, 255, 255, 0.6);
+    transition: color 0.3s ease;
+  }
+}
+
+@mixin card-button-condition {
+  &:hover {
+    background-color: #ebebeb;
+    transition: background-color 0.3s ease;
+  }
+
+  &:active {
+    background-color: #ebebeb;
+    transition: background-color 0.3s ease;
+  }
+}
+
+@mixin arrow-condition {
+  &:hover::before {
+    width: 22px;
+    right: 11px;
+    transition: all 0.2s ease;
+  }
+
+  &:hover::after {
+    right: 5px;
+    transition: all 0.2s ease;
+  }
+
+  &:active {
+    opacity: 0.3;
+    transition: opacity 0.3s ease;
+  }
+}
+
+@mixin input-condition {
+  &:hover {
+    border-color: $base-color-border;
+  }
+
+  &:focus {
+    outline-color: $base-color-text;
+  }
+
+  &:invalid:not(:placeholder-shown) {
+    border: 2px solid #ff8282;
+  }
+}
