--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -5,6 +5,7 @@ $base-accent-color-text: #ffffff;
 $base-color-background: #68b738;
 $base-accent-color-background: #f2f2f2;
 $base-color-border: #cdcdcd;
+$base-color-border-input:#e7e7e7;
 $base-moreaccent-color-background: #eaeaea;
 $icon-background-color: #666666;
 $icon-basic-black: #000000;
