--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -5,7 +5,7 @@
 @forward "common/global.scss";
 
 /* BLOCKS index */
-@forward "blocks/page.scss";
+/* @forward "blocks/page.scss"; */
 @forward "blocks/main-header.scss";
 @forward "blocks/main-navigation.scss";
 @forward "blocks/page-content.scss";
